OATH Toolkit NEWS -- History of user-visible changes.           -*- outline -*-
Copyright (C) 2009-2013 Simon Josefsson.  Licensed under the GPLv3+.

* Version 2.2.0 (unreleased)

** libpskc: Add functions for setting PSKC data.
The new functions are pskc_add_keypackage and all pskc_set_* functions
(see libpskc/include/pskc/keypackage.h).  This allow you to write
programs that generate new PSKC structures.

** liboath: Permit different passwords for different tokens for the same user.
Thanks to Christian Hesse <list@eworm.de>.

** build: Improve building from git with most recent automake and gengetopt.
Thanks to Christian Hesse <list@eworm.de>.

** build: Valgrind is not enabled by default.
It causes too much false positives.  For developers who want, use
--enable-valgrind-tests.  It is still enabled by default when building
from the version controlled sources (see cfg.mk).  Thanks to Christian
Hesse <list@eworm.de>.

** liboath: Make header file usable from C++ (extern "C" guard).
Reported by Alan Markus <alan.markus@gmail.com>.

* Version 2.0.2 (released 2013-01-08)

** oathtool: Base32 decoding of keys are now more liberal in what accepts.
It can now accept keys on the "gr6d 5br7 25s6 vnck v4vl hlao re"
format, i.e., base32 data delimited using SPC and without padding.
The old proper base32 format is still supported.

** liboath: oath_base32_decode now ignores SPC and adds pad characters.

** liboath: If password in usersfile is + then ignore supplied password.
This enables the pam_oath module to be used with external password
verification.  Based on patch from Ilkka Virta <itvirta@iki.fi>.

** tests: Fixed expiry date of some certificates used in the test suite.
The last release would only complete 'make check' during a 30 day window.

** API and ABI is backwards compatible with the previous version.

* Version 2.0.1 (released 2012-10-24)

** libpskc, pskctool: Support sign and verify of PSKC data using XML DigSig.

** libpskc: XML Schema validation modified.