@@ -3,6 +3,12 @@ Copyright (C) 2009-2013 Simon Josefsson.  Licensed under the GPLv3+.
 
 * Version 2.2.0 (unreleased)
 
+** liboath: Add new API methods for validating TOTP OTPs
+The new methods (oath_totp_validate3 and oath_totp_validate3_callback) introduce
+a new parameter *otp_counter, which is set to the actual counter used to
+calculate the OTP (unless it is a NULL pointer). This allows for easier OTP 
+replay detection in applications using liboath.
+
 ** libpskc: Add functions for setting PSKC data.
 The new functions are pskc_add_keypackage and all pskc_set_* functions
 (see libpskc/include/pskc/keypackage.h).  This allow you to write
